--- a/webapp/base.css
+++ b/webapp/base.css
@@ -8,6 +8,12 @@
     font-size: 1rem;
 }
 
+view-router {
+    display: block;
+    max-height: 100vh;
+    max-width: 100vw;
+}
+
 a {
     text-decoration: none;
 }
@@ -26,7 +32,7 @@ a {
 
 input {
     border-radius: var(--padding);
-    border: 1px solid rgba(0, 0 , 0, 0.5);
+    border: 1px solid rgba(0, 0, 0, 0.5);
     transition: border-color 100ms;
 
     padding: caLc(var(--padding) / 4) caLc(var(--padding) / 2);
